--- a/css/index_textForAnimate.css
+++ b/css/index_textForAnimate.css
@@ -270,7 +270,7 @@ section {
     /* 字間距離 */
     letter-spacing: .6vw;
     font-weight: bold;
-    font-size: .9vw;
+    font-size: clamp(10px, 1vw, 24px);
     color: var(--text);
     align-items: self-start;
     font-family: 'Noto+Sans+TC';
@@ -1009,13 +1009,17 @@ section {
     width: 100%;
     /* height: 100%; */
     /* background-color: #CCA568; */
-    background-image: url(../index_images/appearance--bg.jpg);
+    background-image: url(../index_images/bg-new_bottom.jpg);
     background-size: cover;
     text-align: center;
     background-repeat: no-repeat;
     background-position: bottom center;
+    height: 170vh;
 }
-
+.section_apperance{
+    height: 100vh;
+    
+}
 #APPERANCE .title {
     position: absolute;
     z-index: 6;
@@ -1037,7 +1041,6 @@ section {
     position: absolute;
     z-index: 4;
     background-color: var(--block_brown-op0);
-    opacity: 0.3;
     width: 250px;
     height: 250px;
     top: 40vh;
@@ -1097,7 +1100,6 @@ section {
     width: 400px;
     height: 100%;
     color: var(--text);
-    font-size: 1rem;
     align-items: flex-start;
     font-style: 'Noto+Sans+TC';
     font-weight: 400;
@@ -1112,13 +1114,8 @@ section {
     writing-mode: vertical-rl;
     /* 设置文字竖排，从右到左 */
     text-align: start;
-    /* 文字对齐 */
-    /* border: 1px solid black;   边框，方便查看效果 */
-    padding: 10px;
-    /* 内边距 */
+ 
     height: 100%;
-    /* 高度，可以根据需要调整 */
-    width: 50px;
 }
 
 #APPERANCE .text2,
@@ -1129,20 +1126,24 @@ section {
 #APPERANCE .text4 {
     padding-top: -3rem;
 }
-
-.bottom {
-    width: 100%;
-    background-image: url(../index_images/bg_bottom.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: top center;
-    height: 584px;
+.bottom_content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 25vh;
+    
+    
+}
+.bottom_content img{
+    width: 15vw;
 
 }
-
-.bottom_content {
-    align-items: start;
-    justify-content: start;
-
-
+.bottom_content .icon{
+    display: flex;
+    width: 22vw;
+    justify-content: space-between;
+}
+.bottom_content .icon img{
+    width: 40px;
 }
