--- a/css/index_textForAnimate.css
+++ b/css/index_textForAnimate.css
@@ -158,6 +158,7 @@ div.chocolate {
     width: 100vw;
     height: 30vw;
     overflow: hidden;
+    margin-bottom: 10vw;
 }
 
 .title_white p:nth-child(1) {
@@ -340,19 +341,19 @@ section {
 }
 
 .title_white p:nth-child(4) {
-    margin-right: 22vw;
+    margin-right: 10vw;
 }
 
 .title_white p:nth-child(5) {
-    margin-left: 10vw;
+    margin-left: 8vw;
 }
 
 .title_br p:nth-child(4) {
-    margin-right: 22vw;
+    margin-right: 10vw;
 }
 
 .title_br p:nth-child(5) {
-    margin-left: 10vw;
+    margin-left: 8vw;
 }
 
 .banner-content .title_br {
@@ -894,11 +895,12 @@ section {
     position: relative;
     width: 100%;
     height: 60vw;
-    background-image: url(../index_images/bg-b.png);
+    /* background-image: url(../index_images/bg-b.png); */
     background-size: cover;
     text-align: center;
     background-repeat: no-repeat;
     background-position: center;
+    background-color: #6B3B20;
 }
 
 .taste_l {
@@ -1014,10 +1016,15 @@ section {
     text-align: center;
     background-repeat: no-repeat;
     background-position: bottom center;
-    height: 170vh;
+    height: 200vh;
+    
 }
 .section_apperance{
+    position: absolute;
+    top: 0;
     height: 100vh;
+    width: 100%;
+    background-color: #d9936a;
     
 }
 #APPERANCE .title {
