--- a/css/about.css
+++ b/css/about.css
@@ -74,21 +74,28 @@ a {
 }
 
 .sec_about {
-    padding-top: 10vw;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     background-image: url(../index_images/bg-w.png);
     height: 100%;
+    padding-top: 20vw;
 }
-.title {
+/* 以下標題 */
+
+.title_wrap{
+    position: absolute;
+    top:100px;
+
     width: 100%;
     align-items: start;
 }
-.title>img{
+.title_wrap>img{
     width: 30vw;
+    min-width: 300px;
 }
+/* 以上標題 */
 .content{
     width: 80%;
 }
