--- a/css/about.css
+++ b/css/about.css
@@ -120,7 +120,7 @@ a {
     font-size: 2.4vw;
     font-weight: 600;
     border-bottom: solid 2px var(--block_brown);
-    padding: 0 20px 20px;
+    padding: 0 20px 20px 0;
     margin-bottom: 20px;
 
 }
@@ -143,4 +143,14 @@ address {
     flex:1;
     align-items: center;
     justify-content: center;
+}
+@media (max-width: 1024px) {
+    iframe {
+        width: 200px;
+        height: 200px;
+        
+    }
+    .sec_about{
+        padding-top:200px;
+    }
 }
