--- a/css/Customization.css
+++ b/css/Customization.css
@@ -230,7 +230,7 @@ body {
     z-index: 1;
     width: 100%;
     height: 111%;
-    /* background-color: rgba(0, 0, 0, 0.4); */
+    /* background-color: rgba(0, 0, 0, 0.); */
     background-color: rgba(192, 191, 191, 1);
     /* background-color: #C0BFBF; */
 }
