--- a/css/Customization.css
+++ b/css/Customization.css
@@ -140,6 +140,14 @@ body {
     height: 34px;
 }
 
+#menu_id_search_divBox_a1_input{
+    border: none;
+   padding: 10px 0;
+   padding-left: 5px;
+   border-radius: 5px;
+   background-color: transparent;
+}
+
 #menu_id_search_divBox_a1 p {
     display: flex;
     align-items: center;
@@ -230,8 +238,8 @@ body {
     z-index: 1;
     width: 100%;
     height: 111%;
-    /* background-color: rgba(0, 0, 0, 0.); */
-    background-color: rgba(192, 191, 191, 1);
+    background-color: rgba(0, 0, 0, 0.4);
+    /* background-color: rgba(192, 191, 191, 1); */
     /* background-color: #C0BFBF; */
 }
 
@@ -4121,4 +4129,8 @@ footer .logo {
 
 #full_list_box_bottom {
     margin-top: 10%;
+}
+
+#full_list_box_bottom img{
+    cursor: pointer;
 }
